# SayCut

./: .env.example  .gitignore  CLAUDE.md  README.md  assistant.py  pyproject.toml  saycut-demo.html  workflow.md
backend/: __init__.py  asset_storage.py  config.py  db.py  main.py  models.py  storybook_tools.py  voice_agent.py  ws_handler.py  ws_protocol.py
bosonUtil/: __init__.py  api.py  audio.py  audio_concat.py  eigen_config.py  eigen_i2v.py  eigen_image_edit.py  eigen_image_gen.py  eigen_script.py  eigen_tts.py  tools.py
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/components/: ActivityLog.tsx  AgentPanel.tsx  MessageBubble.tsx  ModeSelector.tsx  PlayerOverlay.tsx  ProjectCard.tsx  SayCutLogo.tsx  SceneCard.tsx  SceneEditor.tsx  SceneStrip.tsx  StatusPill.tsx  ToolCallCard.tsx  VoiceOrb.tsx  VoiceWaveform.tsx  Workspace.tsx
frontend/app/hooks/: useAgent.ts  useAudioPlayback.ts  useAudioRecorder.ts  useMockAgent.ts  useWaveformAnalyser.ts
frontend/app/lib/: api.ts  editorContext.ts  mockAgent.ts  mockData.ts  stripToolCalls.ts  types.ts  wsClient.ts
frontend/app/project/[id]/: page.tsx
frontend/app/stores/: conversationStore.ts  storybookStore.ts  uiStore.ts
scripts/: generate_voice_samples.py
tests/: conftest.py  test_asset_storage.py  test_db.py  test_eigen_integration.py  test_eigen_unit.py  test_integration.py  test_main.py  test_storybook_tools.py  test_voice_agent.py  test_ws_handler.py  test_ws_protocol.py
