[project]
name = "saycut"
version = "0.1.0"
description = "AI-powered visual audio storybook maker"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai>=2.29.0",
    "soundfile>=0.13.1",
    "silero-vad>=6.2.1",
    "torch>=2.10.0",
    "torchaudio>=2.10.0",
    "numpy>=2.1.0",
    "sounddevice>=0.5.1",
    "onnxruntime>=1.24.4",
    "httpx>=0.28.0",
    "websockets>=15.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "aiosqlite>=0.21.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
    "httpx>=0.28.0",
]

[tool.pytest.ini_options]
markers = [
    "integration: tests that require BOSONAI_API_KEY and network access",
    "eigenai_integration: tests that require EIGENAI_API_KEY and network access",
    "slow: long-running tests (e.g. video generation)",
]
